cicd/jenkins/02-rbac-app.yaml
# ===============================
# Namespace 정의
# ===============================
apiVersion: v1
kind: Namespace
metadata:
  # 애플리케이션 전용 네임스페이스
  # → SCG 뒤에서 실제 서비스(APP Pod)들이 배포되는 공간
  name: app

  labels:
    # 네임스페이스 식별용 라벨
    # → 모니터링, 정책(NetworkPolicy), 관리 목적
    name: app
