cicd/jenkins/06-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: cicd
spec:
  type: ClusterIP
  selector:
    app: jenkins
  ports:
    - name: http
      port: 80
      targetPort: 8080
